--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,7 @@
 {
     "require": {
         "symfony/class-loader": "2.4.*@dev",
-        "symfony/http-foundation": "2.4.*@dev"
+        "symfony/http-foundation": "2.4.*@dev",
+        "symfony/routing": "2.4.*@dev"
     }
 }
