Required event-dispatcher

--- a/composer.json
+++ b/composer.json
@@ -3,9 +3,13 @@
         "symfony/class-loader": "2.4.*@dev",
         "symfony/http-foundation": "2.4.*@dev",
         "symfony/routing": "2.4.*@dev",
-        "symfony/http-kernel": "2.4.*@dev"
+        "symfony/http-kernel": "2.4.*@dev",
+        "symfony/event-dispatcher": "2.4.*@dev"
     },
     "autoload": {
-        "psr-0": { "Scarlett": "src/", "Calendar": "src/" }
+        "psr-0": { 
+            "Scarlett": "src/", 
+            "Calendar": "src/" 
+        }
     }
 }
